Modify: 檢驗報告頁CSS調整

--- a/report.html
+++ b/report.html
@@ -276,19 +276,15 @@
                     <img src="image/report/logo.jpg">
             </td>
                 <td style="width: 50%;text-align: center;">
-                    <div class="font-blod" id="ui_title_top">My Oxygener Report
-                    </div>
-                    <div class="font-blod" id="ui_title_middle">個人化改善方案
-                    </div>
-                    <div class="font-blod" id="ui_title_bottom">優氧循環表
-                    </div>
+                    <div>
+                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/title.jpg">
                 </td>
                 <td style="width: 25%;text-align: center;"></td>
             </tr>
         </table>
         <div style="text-align: center;">
-            <p class="font-blod" id="ui_D_1"></p>
-            <p class="font-blod" id="ui_D_2"></p>
+            <p class="font-blod mt-4 general-text" id="ui_D_1"></p>
+            <p class="font-blod mb-4 general-text" id="ui_D_2"></p>
         </div>
         <div class="container">
             <div class="card-columns card-columns-header">
@@ -410,25 +406,49 @@
                 </div>
             </div>
         </div>
-        <br>
-        <div style="text-align: center;">
-            <p class="font-blod" style="font-size: 1.4em">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
+        <div class="text-center mt-5">
+            <p class="font-blod general-text">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
         </div>
     </div>
-    <div class="text-center">
-        <a id="downloadReport" href="#"><img src="image/report/btn_restart.jpg" class="img-fluid p-3" alt="Responsive image"></a>
-        <a id="back" href="index.html"><img src="image/report/btn_back.jpg" class="img-fluid p-3" alt="Responsive image">
-        
-    </div>
-    <div class="text-center mt-5">
-        <img class="img-fluid" alt="Responsive image" src="image/report/content_top.jpg">
-    </div>
 
-    <div class="text-center mt-5">
-        <a href="https://lihi.cc/mjaAa"><img class="img-fluid p-3" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
-    </div>
-    <div class="text-center mt-5">
-        <img class="img-fluid" alt="Responsive image" src="image/report/content_bottom.jpg">
+    <div class="container">
+        <div class="text-center">
+            <a id="downloadReport" href="#"><img src="image/report/btn_restart.jpg" class="img-fluid p-3" alt="Responsive image"></a>
+            <a id="back" href="index.html"><img src="image/report/btn_back.jpg" class="img-fluid p-3" alt="Responsive image">
+            </a>
+        </div>
+
+        <div class="text-center mt-5">
+            <img class="img-fluid" alt="Responsive image" src="image/report/content_top.jpg">
+        </div>
+
+        <div class="text-center mt-5">
+            <a href="https://lihi.cc/mjaAa"><img class="img-fluid p-3" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
+        </div>
+        <div class="text-center mt-5">
+            <img class="img-fluid" alt="Responsive image" src="image/report/content_bottom.jpg">
+        </div>
+        <div class="container">
+            <div class="text-center mt-5 align-baseline">
+                <a href="https://www.oxygener.com"><img class="img-fluid" alt="Responsive image" src="image/report/contact_web.jpg"></a>
+            </div>
+            <div class="text-center mt-3">
+                <a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><img class="img-fluid" alt="Responsive image" src="image/report/contact_fb.jpg"></a>
+            </div>
+            <div class="text-center mt-3">
+                <a href="line://ti/p/@oxygener">
+                    <img class="img-fluid" alt="Responsive image" src="image/report/contact_line.jpg">
+                </a>
+            </div>
+            <div class="text-center mt-3">
+                <img class="img-fluid" alt="Responsive image" src="image/report/contact_tel.jpg">
+            </div>
+            <div class="text-center mt-3 mb-5">
+                <a href="tel:+88662979053"><img class="img-fluid" alt="Responsive image" src="image/report/contact_email.jpg">
+                </a>
+            </div>
+        </div>
+
     </div>
     <!-- Footer -->
     <section id="footer">
@@ -456,7 +476,6 @@
                     </a>
                 </div>
             </div>
-            
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
                     <p>本網站文字圖片版權所有為奧斯帝摩生醫科技股份有限公司 轉載必究</p>
@@ -466,7 +485,7 @@
             </div>
         </div>
     </section>
-    <!-- ./Footer -->
+            <!-- ./Footer -->
 </body>
 
 </html>
