modify: 調整檢驗報告頁CSS

--- a/report.html
+++ b/report.html
@@ -270,18 +270,20 @@
 
 <body>
     <div id="table_canvas">
-        <table width="100%" style="margin: 40px 0px 40px 0px;">
+        <div>
+        <table class="container-fluid mt-3 mb-3 mt-lg-5  mb-lg-5">
             <tr>
                 <td style="width: 25%; text-align: center;">
-                    <img src="image/report/logo.jpg">
+                    <img class="img-fluid pl-2" alt="Responsive image" src="image/report/logo.jpg">
             </td>
                 <td style="width: 50%;text-align: center;">
                     <div>
-                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/title.jpg">
+                        <img class="img-fluid pl-2" alt="Responsive image" src="image/report/title.jpg">
                 </td>
                 <td style="width: 25%;text-align: center;"></td>
             </tr>
         </table>
+        </div>
         <div style="text-align: center;">
             <p class="font-blod mt-4 general-text" id="ui_D_1"></p>
             <p class="font-blod mb-4 general-text" id="ui_D_2"></p>
@@ -292,7 +294,7 @@
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-C-2">創造有利條件</h4>
                         <p id="card-C-2-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
-                        <ol>
+                        <ol class="pl-2 pl-lg-4">
                             <li class="card-text ui_C_2"></li>
                             <li class="card-text ui_C_2"></li>
                             <li class="card-text ui_C_2"></li>
@@ -303,7 +305,7 @@
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-C-1">聚焦內在的方法</h4>
                         <p id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
-                        <ol>
+                        <ol class="pl-2 pl-lg-4">
                             <li class="card-text ui_C_1"></li>
                             <li class="card-text ui_C_1"></li>
                             <li class="card-text ui_C_1"></li>
@@ -315,35 +317,35 @@
         <div class="container">
             <div class="card-columns">
                 <div class="card card-grid-middle-large" id="card-A-1">
-                    <div class="card-body">
+                    <div class="card-body pl-2">
                         <h4 class="card-title text-center" id="card-title-A-1">供給性缺氧</h4>
                         <p class="card-text" id="ui_A_1_1">指數◆ </p>
                         <p class="card-text" id="ui_A_1_2"></p>
                     </div>
                 </div>
                 <div class="card  card-grid-middle-large" id="card-A-2">
-                    <div class="card-body">
+                    <div class="card-body pl-2">
                         <h4 class="card-title text-center" id="card-title-A-2">耗損性缺氧</h4>
                         <p class="card-text" id="ui_A_2_1">指數◆ </p>
                         <p class="card-text" id="ui_A_2_2"></p>
                     </div>
                 </div>
                 <div class="card" id="card-A-3">
-                    <div class="card-body card-grid-middle-small">
+                    <div class="card-body card-grid-middle-small pl-2">
                         <h4 class="card-title text-center" id="card-title-A-3">熱性體質</h4>
                         <p class="card-text" id="ui_A_3_1">指數◆ </p>
                         <p class="card-text" id="ui_A_3_2"></p>
                     </div>
                 </div>
                 <div class="card" id="card-A-4">
-                    <div class="card-body card-grid-middle-small">
+                    <div class="card-body card-grid-middle-small pl-2">
                         <h4 class="card-title text-center" id="card-title-A-4">濕性體質</h4>
                         <p class="card-text" id="ui_A_4_1">指數◆ </p>
                         <p class="card-text" id="ui_A_4_2"></p>
                     </div>
                 </div>
                 <div class="card" id="card-A-5">
-                    <div class="card-body card-grid-middle-small">
+                    <div class="card-body card-grid-middle-small pl-2">
                         <h4 class="card-title text-center" id="card-title-A-5">寒性體質</h4>
                         <p class="card-text" id="ui_A_5_1">指數◆ </p>
                         <p class="card-text" id="ui_A_5_2"></p>
@@ -353,7 +355,7 @@
                     <div class="card-body card-grid-middle-small">
                         <h4 class="card-title text-center" id="card-title-B-3">免疫代謝治療</h4>
                         <p id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
-                        <ol>
+                        <ol class="pl-2">
                             <li class="card-text ui_B_3"></li>
                             <li class="card-text ui_B_3"></li>
                             <li class="card-text ui_B_3"></li>
@@ -364,7 +366,7 @@
                     <div class="card-body card-grid-middle-small">
                         <h4 class="card-title text-center" id="card-title-B-4">微循環治療</h4>
                         <p id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
-                        <ol>
+                        <ol class="pl-2">
                             <li class="card-text ui_B_4"></li>
                             <li class="card-text ui_B_4"></li>
                             <li class="card-text ui_B_4"></li>
@@ -375,7 +377,7 @@
                     <div class="card-body card-grid-middle-small">
                         <h4 class="card-title text-center" id="card-title-B-5">機能復甦治療</h4>
                         <p id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
-                        <ol>
+                        <ol class="pl-2">
                             <li class="card-text ui_B_5"></li>
                             <li class="card-text ui_B_5"></li>
                             <li class="card-text ui_B_5"></li>
@@ -386,7 +388,7 @@
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-B-1">供養治療</h4>
                         <p id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>
-                        <ol>
+                        <ol class="pl-2">
                             <li class="card-text ui_B_1"></li>
                             <li class="card-text ui_B_1"></li>
                             <li class="card-text ui_B_1"></li>
@@ -397,7 +399,7 @@
                     <div class="card-body">
                         <h4 class="card-title text-center" id="card-title-B-2">耗氧治療</h4>
                         <p id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
-                        <ol>
+                        <ol class="pl-2">
                             <li class="card-text ui_B_2"></li>
                             <li class="card-text ui_B_2"></li>
                             <li class="card-text ui_B_2"></li>
@@ -413,8 +415,8 @@
 
     <div class="container">
         <div class="text-center">
-            <a id="downloadReport" href="#"><img src="image/report/btn_restart.jpg" class="img-fluid p-3" alt="Responsive image"></a>
-            <a id="back" href="index.html"><img src="image/report/btn_back.jpg" class="img-fluid p-3" alt="Responsive image">
+            <a id="downloadReport" href="#"><img src="image/report/btn_restart.jpg" class="img-fluid p-2" alt="Responsive image"></a>
+            <a id="back" href="index.html"><img src="image/report/btn_back.jpg" class="img-fluid p-2" alt="Responsive image">
             </a>
         </div>
 
@@ -423,7 +425,7 @@
         </div>
 
         <div class="text-center mt-5">
-            <a href="https://lihi.cc/mjaAa"><img class="img-fluid p-3" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
+            <a href="https://lihi.cc/mjaAa"><img class="img-fluid pl-2" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
         </div>
         <div class="text-center mt-5">
             <img class="img-fluid" alt="Responsive image" src="image/report/content_bottom.jpg">
@@ -441,10 +443,10 @@
                 </a>
             </div>
             <div class="text-center mt-3">
-                <img class="img-fluid" alt="Responsive image" src="image/report/contact_tel.jpg">
+                <a href="tel:+88662979053"><img class="img-fluid" alt="Responsive image" src="image/report/contact_tel.jpg"></a>
             </div>
             <div class="text-center mt-3 mb-5">
-                <a href="tel:+88662979053"><img class="img-fluid" alt="Responsive image" src="image/report/contact_email.jpg">
+                <a href="mailto:service@oxygener.com"><img class="img-fluid" alt="Responsive image" src="image/report/contact_email.jpg">
                 </a>
             </div>
         </div>
@@ -455,24 +457,24 @@
         <div class="container">
             <div class="row text-center text-xs-center text-sm-left text-md-left align-items-end">
                 <div class="col-xs-12 col-sm-4 col-md-4 mt-5">
-                    <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_logo.png">
+                    <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_logo.png">
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <ul class="list-unstyled list-inline social text-center">
-                        <li class="list-inline-item p-3"><a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><i class="fa fa-facebook"></i></a></li>
-                        <li class="list-inline-item p-3"><a href="https://www.instagram.com/shirleyoxygen/"><i class="fa fa-instagram"></i></a></li>
-                        <li class="list-inline-item p-3"><a href="mailto:service@oxygener.com"><i class="fa fa-envelope"></i></a></li>
+                        <li class="list-inline-item p-2"><a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><i class="fa fa-facebook"></i></a></li>
+                        <li class="list-inline-item p-2"><a href="https://www.instagram.com/shirleyoxygen/"><i class="fa fa-instagram"></i></a></li>
+                        <li class="list-inline-item p-2"><a href="mailto:service@oxygener.com"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <a href="tel:+88662979053">
-                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_tel.png">
+                        <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_tel.png">
                     </a>
                     <a href="mailto:service@oxygener.com">
-                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_email.png">
+                        <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_email.png">
                     </a>
                     <a href="https://www.oxygener.com">
-                        <img  class="img-fluid p-3" alt="Responsive image" src="image/report/footer_web.png">
+                        <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_web.png">
                     </a>
                 </div>
             </div>
